--- a/internal/site/src/locales/zh/zh.po
+++ b/internal/site/src/locales/zh/zh.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: zh\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-12-01 23:32\n"
+"PO-Revision-Date: 2026-01-10 17:34\n"
 "Last-Translator: \n"
 "Language-Team: Chinese Traditional\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
@@ -24,6 +24,10 @@ msgstr ""
 msgid "{0} of {1} row(s) selected."
 msgstr "已選取 {1} 個項目中的 {0} 個"
 
+#: src/components/routes/system/info-bar.tsx
+msgid "{cores, plural, one {# core} other {# cores}}"
+msgstr "{cores, plural, one {# 核心} other {# 核心}}"
+
 #: src/lib/utils.ts
 msgid "{count, plural, one {{countString} day} other {{countString} days}}"
 msgstr "{count, plural, one {{countString} 天} other {{countString} 天}}"
@@ -35,6 +39,10 @@ msgstr "{count, plural, one {{countString} 小時} other {{countString} 小時}}
 #: src/lib/utils.ts
 msgid "{count, plural, one {{countString} minute} few {{countString} minutes} many {{countString} minutes} other {{countString} minutes}}"
 msgstr "{count, plural, one {{countString} 分鐘} few {{countString} 分鐘} many {{countString} 分鐘} other {{countString} 分鐘}}"
+
+#: src/components/routes/system/info-bar.tsx
+msgid "{threads, plural, one {# thread} other {# threads}}"
+msgstr "{threads, plural, one {# 執行緒} other {# 執行緒}}"
 
 #: src/lib/utils.ts
 msgid "1 hour"
@@ -101,7 +109,7 @@ msgstr "活動狀態"
 #: src/components/routes/settings/quiet-hours.tsx
 #: src/components/routes/settings/quiet-hours.tsx
 msgid "Add {foo}"
-msgstr ""
+msgstr "新增{foo}"
 
 #: src/components/add-system.tsx
 msgid "Add <0>System</0>"
@@ -172,7 +180,7 @@ msgstr "您確定嗎？"
 
 #: src/components/copy-to-clipboard.tsx
 msgid "Automatic copy requires a secure context."
-msgstr "只有在受保護的環境才能自動複製。"
+msgstr "只有在受保護的環境（HTTPS）才能自動複製。"
 
 #: src/components/routes/system.tsx
 msgid "Average"
@@ -181,6 +189,11 @@ msgstr "平均"
 #: src/components/routes/system.tsx
 msgid "Average CPU utilization of containers"
 msgstr "容器的平均 CPU 使用率"
+
+#. placeholder {0}: alertData.unit
+#: src/components/alerts/alerts-sheet.tsx
+msgid "Average drops below <0>{value}{0}</0>"
+msgstr "平均值降至<0>{value}{0}</0>以下"
 
 #. placeholder {0}: alertData.unit
 #: src/components/alerts/alerts-sheet.tsx
@@ -214,7 +227,13 @@ msgstr "備份"
 msgid "Bandwidth"
 msgstr "網路流量"
 
+#. Battery label in systems table header
+#: src/components/systems-table/systems-table-columns.tsx
+msgid "Bat"
+msgstr "電池"
+
 #: src/components/routes/system.tsx
+#: src/lib/alerts.ts
 msgid "Battery"
 msgstr "電池"
 
@@ -230,9 +249,16 @@ msgstr "停用"
 msgid "Before"
 msgstr "之前"
 
+#. placeholder {0}: alert.value
+#. placeholder {1}: info.unit
+#. placeholder {2}: alert.min
+#: src/components/active-alerts.tsx
+msgid "Below {0}{1} in last {2, plural, one {# minute} other {# minutes}}"
+msgstr "在過去的{2, plural, one {# 分鐘} other {# 分鐘}}中低於{0}{1}"
+
 #: src/components/login/auth-form.tsx
 msgid "Beszel supports OpenID Connect and many OAuth2 authentication providers."
-msgstr "Beszel支援OpenID Connect和許多OAuth2認證提供者。"
+msgstr "Beszel 支援 OpenID Connect 和許多 OAuth2 認證提供者。"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Beszel uses <0>Shoutrrr</0> to integrate with popular notification services."
@@ -317,7 +343,7 @@ msgstr "圖表選項"
 
 #: src/components/login/forgot-pass-form.tsx
 msgid "Check {email} for a reset link."
-msgstr "檢查{email}以取得重設連結。"
+msgstr "檢查 {email} 以取得重設連結。"
 
 #: src/components/routes/settings/layout.tsx
 msgid "Check logs for more details."
@@ -331,7 +357,7 @@ msgstr "檢查您的通知服務"
 #: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table.tsx
 msgid "Clear"
-msgstr ""
+msgstr "清除"
 
 #: src/components/containers-table/containers-table.tsx
 msgid "Click on a container to view more information."
@@ -424,7 +450,7 @@ msgstr "複製下面的代理程式<0>docker-compose.yml</0>內容，或使用<1
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Copy YAML"
-msgstr "複製YAML"
+msgstr "複製 YAML"
 
 #: src/components/containers-table/containers-table-columns.tsx
 #: src/components/systemd-table/systemd-table-columns.tsx
@@ -568,7 +594,7 @@ msgstr "文件"
 
 #. Context: System is down
 #: src/components/alerts-history-columns.tsx
-#: src/components/routes/system.tsx
+#: src/components/routes/system/info-bar.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 #: src/lib/alerts.ts
 msgid "Down"
@@ -594,7 +620,7 @@ msgstr "編輯"
 #: src/components/add-system.tsx
 #: src/components/routes/settings/quiet-hours.tsx
 msgid "Edit {foo}"
-msgstr ""
+msgstr "編輯{foo}"
 
 #: src/components/login/auth-form.tsx
 #: src/components/login/forgot-pass-form.tsx
@@ -803,11 +829,6 @@ msgstr "未啟用"
 msgid "Invalid email address."
 msgstr "無效的電子郵件地址。"
 
-#. Linux kernel
-#: src/components/routes/system.tsx
-msgid "Kernel"
-msgstr "Kernel"
-
 #: src/components/routes/settings/general.tsx
 msgid "Language"
 msgstr "語言"
@@ -897,9 +918,10 @@ msgstr "手動設定說明"
 #. Chart select field. Please try to keep this short.
 #: src/components/routes/system.tsx
 msgid "Max 1 min"
-msgstr "最多1分鐘"
+msgstr "最多 1 分鐘"
 
 #: src/components/containers-table/containers-table-columns.tsx
+#: src/components/routes/system/info-bar.tsx
 #: src/components/systemd-table/systemd-table-columns.tsx
 #: src/components/systemd-table/systemd-table.tsx
 #: src/components/systems-table/systems-table-columns.tsx
@@ -1052,7 +1074,7 @@ msgstr "密碼"
 
 #: src/components/login/auth-form.tsx
 msgid "Password must be at least 8 characters."
-msgstr "密碼需要至少8個字元"
+msgstr "密碼需要至少 8 個字元。"
 
 #: src/components/login/auth-form.tsx
 msgid "Password must be less than 72 bytes."
@@ -1064,7 +1086,7 @@ msgstr "已收到密碼重設請求"
 
 #: src/components/routes/settings/quiet-hours.tsx
 msgid "Past"
-msgstr ""
+msgstr "已過期"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Pause"
@@ -1089,7 +1111,7 @@ msgstr "狀態時間佔比"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
-msgstr "請<0>設定一個SMTP 伺服器</0>以確保能傳送警報。"
+msgstr "請<0>設定一個 SMTP 伺服器</0>以確保能傳送警報。"
 
 #: src/components/alerts/alerts-sheet.tsx
 msgid "Please check logs for more details."
@@ -1245,7 +1267,7 @@ msgstr "儲存系統"
 
 #: src/components/routes/settings/quiet-hours.tsx
 msgid "Schedule"
-msgstr ""
+msgstr "排程"
 
 #: src/components/routes/settings/quiet-hours.tsx
 msgid "Schedule quiet hours where notifications will not be sent, such as during maintenance periods."
@@ -1269,7 +1291,7 @@ msgstr "查看<0>通知設定</0>以設定您如何接收警報。"
 
 #: src/components/routes/settings/quiet-hours.tsx
 msgid "Select {foo}"
-msgstr ""
+msgstr "選取{foo}"
 
 #: src/components/routes/system.tsx
 msgid "Sent"
@@ -1344,7 +1366,7 @@ msgstr "系統的虛擬記憶體使用量"
 
 #: src/components/routes/system.tsx
 msgid "Swap Usage"
-msgstr "虛擬記憶體使用量"
+msgstr "交換空間使用量"
 
 #: src/components/add-system.tsx
 #: src/components/alerts-history-columns.tsx
@@ -1439,8 +1461,8 @@ msgstr "時間格式"
 msgid "To email(s)"
 msgstr "發送到電子郵件"
 
-#: src/components/routes/system.tsx
-#: src/components/routes/system.tsx
+#: src/components/routes/system/info-bar.tsx
+#: src/components/routes/system/info-bar.tsx
 msgid "Toggle grid"
 msgstr "切換網格"
 
@@ -1510,12 +1532,16 @@ msgid "Triggers when any sensor exceeds a threshold"
 msgstr "當任何感應器超過閾值時觸發"
 
 #: src/lib/alerts.ts
+msgid "Triggers when battery charge drops below a threshold"
+msgstr "當電池電量降至閾值以下時觸發"
+
+#: src/lib/alerts.ts
 msgid "Triggers when combined up/down exceeds a threshold"
 msgstr "當總流量超過閾值時觸發"
 
 #: src/lib/alerts.ts
 msgid "Triggers when CPU usage exceeds a threshold"
-msgstr "當CPU使用率超過閾值時觸發"
+msgstr "當 CPU 使用率超過閾值時觸發"
 
 #: src/lib/alerts.ts
 msgid "Triggers when GPU usage exceeds a threshold"
@@ -1564,7 +1590,7 @@ msgid "Unlimited"
 msgstr "無限制"
 
 #. Context: System is up
-#: src/components/routes/system.tsx
+#: src/components/routes/system/info-bar.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Up"
 msgstr "上線"
@@ -1591,7 +1617,7 @@ msgstr "每 10 分鐘更新一次。"
 msgid "Upload"
 msgstr "上傳"
 
-#: src/components/routes/system.tsx
+#: src/components/routes/system/info-bar.tsx
 msgid "Uptime"
 msgstr "運行時間"
 
